DE134699: Removing the base-href and adding context root to work with apache

--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -3,7 +3,6 @@
 <head>
     <title>Gateway Java Sample</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <base href="/sample/">
     <link rel="stylesheet" type="text/css" href="stylesheets/main.css" />
 
     <script th:src="@{webjars/jquery/jquery.min.js}"></script>
@@ -14,7 +13,7 @@
 <body>
 <div class="jumbotron text-center">
     <div class="container">
-        <h1 href="/">Gateway Java Sample Code</h1>
+        <h1>Gateway Java Sample Code</h1>
         <p>This set contains working example code to help you integrate your application into the payment gateway. Below are the transaction types covered in this example.</p>
     </div>
 </div>
